scrybe_frontend/src/pages/AboutUs/About.module.scss
// fill in styles

@mixin tablet {
    @media screen and (max-width: 991px) {
      @content;
    }
  }
  @mixin mobile {
    @media screen and (max-width: 579px) {
      @content;
    }
  }
  
  $heading: #313131;
  $blue: #006cff;
  $text: #1d1d1c;
  $blue-bg: #e6f0ff;
  
  %paragraph {
    color: $text;
    font-size: 20px;
    line-height: 26px;
    font-weight: 300;
    @include mobile {
      font-size: 16px;
      line-height: 20px;
    }
  }
  %h4 {
    font-size: 24px;
    font-weight: 600;
    color:$text;
  
    @include mobile {
      font-size: 20px;
    }
  }
  %h5 {
    font-size: 20px;
    font-weight: 600;
    color:#313131;
  }
  
  .row {
    display: flex;
  
    @include tablet {
      display: flex;
      flex-direction: column;
    }
  }
  .column {
    padding: 30px;
    display: flex;
    align-items: center;
    flex-direction: column;
  
    @include mobile {
      padding: 0px;
    }
  }
  
  .container {
    padding: 100px;
    background-color: white;
  
    .line {
      width: 100%;
      height: 1px;
      background-color: $blue;
      margin-top: 30px;
    }
  
    .heading {
      font-size: 48px;
      font-weight: 600;
      line-height: 56px;
      text-align: center;
      color: $text;
      padding-bottom: 40px;
  
      @include mobile {
        font-size: 24px;
        line-height: 32px;
      }
    }
    .contain {
      padding-left: 100px;
      padding-right: 100px;
  
      @include tablet {
        padding-left: 0px;
        padding-right: 0px;
      }
      @include mobile {
        padding-left: 0px;
        padding-right: 0px;
      }
  
      .heading {
        @include mobile {
          padding: 0;
        }
      }
    }
    span {
      color: $blue;
    }
  
    .column__left,
    .column__right {
      width: 50%;
      p {
        @extend %paragraph;
      }
      img {
        width: 100%;
      }
      @include tablet {
        width: 100%;
        padding: 40px 0px;
      }
      @include mobile {
        width: 100%;
        padding: 40px 0px;
      }
    }
    @include tablet {
      padding: 50px;
    }
    @include mobile {
      padding: 20px;
    }
  }
  .hero {
    .row {
      display: flex;
      justify-content: center;
      text-align: center;
    }
  }
  
  .container__values {
    background-color: $blue-bg;
  
    .row__col {
      display: flex;
      flex-direction: column;
    }
    .column__right,
    .column__left {
      @include mobile {
        padding: 0px;
      }
      @include tablet {
        padding: 0px;
      }
    }
  
    .wrap {
      border: 1px solid $blue;
      padding: 20px;
      border-radius: 8px;
      margin-bottom: 50px;
  
      @include mobile {
        margin-bottom: 30px;
      }
    }
    .heading__icon {
      display: flex;
      align-items: center;
      margin-bottom: 20px;
  
      @include mobile{
        justify-content: center;
      }
    
      h4 {
        margin-right: 30px;
  
        @extend %h4;
      }
      img {
        width: 30px;
      }
    }
  }
  .container__partners {
    p {
      text-align: center;
      @extend %paragraph;
    }
    .row {
      display: flex;
      flex-direction: row;
  
      @include tablet {
        flex-wrap: wrap;
      }
  
      @include mobile {
        flex-direction: row;
        flex-wrap: wrap;
        padding-top: 30px;
      }
    }
    .companies {
      display: flex;
      width: 25%;
      align-items: center;
      padding: 50px 0px;
  
      @include tablet {
        width: 40%;
        padding: 10px;
      }
  
      @include mobile {
        width: 100%;
        padding: 10px;
      }
  
      img {
        width: 55px;
        margin-right: 20px;
  
        @include mobile {
          width: 30px;
        }
      }
    }
    .partners__text {
      padding: 0px 150px;
  
      @include tablet {
        padding: 20px;
      }
      @include mobile {
        padding: 0px;
      }
    }
  }
  .container__team {
    .row {
      flex-direction: column;
    }
    .col {
      padding: 20px;
      width: 25%;
      display: flex;
      flex-direction: column;
      align-items: center;
  
      @include mobile {
        padding: 0px;
        width: 45%;
        margin-bottom: 20px;
      }
      @include tablet{
       flex-wrap: wrap;
      }
  
      img {
        width: 100%;
      }
    }
    .wrap2 {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
  
      @include tablet {
        justify-content: space-between;
        gap: 20px;
      }
  
      @include mobile {
        justify-content: space-between;
        gap: 20px;
      }
    }
    h5 {
      margin-top: 20px;
      margin-bottom: 20px;
      @extend %h5;
      text-align: center;
  
      @include mobile {
        font-size: 14px;
        margin-bottom: 10px;
      }
    }
    p {
      @extend %paragraph;
  
      @include mobile {
        font-size: 16px;
      }
    }
    .team__text {
      padding: 0px 150px;
      margin-bottom: 50px;
      text-align: center;
  
      @include mobile {
        padding: 0px;
      }
      @include tablet {
        padding: 20px;
      }
    }
  }
  .hero {
    .row {
      padding-top: 100px;
      padding-bottom: 100px;
      @include tablet {
        padding-top: 0px;
      }
      @include mobile {
        padding-top: 0px;
        padding-bottom: 50px;
      }
    }
    h1 {
      @include mobile {
        padding: 0px 50px;
      }
     
       
      }
      .heading{
        @include mobile{
          padding-bottom: 20px;
        }
    }
  }
  .container {
    @include mobile {
      padding-top: 50px;
    }
  }
  
  .row1 {
    display: flex;
    align-items: center;
    p {
      text-align: left;
      margin-bottom: 20px;
    }
    .column__left {
      @include mobile {
        padding-top: 0px;
      }
    }
    @include tablet {
      padding: 20px 0px;
    }
    span {
      font-weight: 600;
      color: $text;
    }
  }
  

